# koroteka-people

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: baa191033433_person_and_contact_tables.py
koroteka_people/: database.py  models.py  settings.py
